force-app/main/default/objects/Opportunity_Tier_Milestone__mdt/Opportunity_Tier_Milestone__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Tier Milestone</label>
    <pluralLabel>Opportunity Tier Milestones</pluralLabel>
</CustomObject>