force-app/main/default/objects/Opportunity_Tier_Milestone__mdt/fields/Discount_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Discount_Milestone__c</fullName>
    <label>Discount Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>