force-app/main/default/objects/Opportunity_Tier_Milestone__mdt/fields/Next_Upgraded_Membership__c.field-meta.xml
<CustomField>
    <fullName>Next_Upgraded_Membership__c</fullName>
    <label>Next Upgraded Membership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
                <default>true</default>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>